[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "qit"
version = "0.1.0"
description = "Base common quantum computing objects description library"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "dataclasses-json",
    "dataclasses"
]

[project.urls]
Repository = "https://github.com/QuantumCommons/qit"